--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,18 +26,12 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Login to ghcr.io
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare image tag (master, on schedule)
         if: github.ref == 'refs/heads/master' || github.event_name == 'schedule'
@@ -56,8 +50,8 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64/v8
-          tags: ${{ env.DOCKER_BASE_NAME }}:${{ env.DOCKER_TAG }}
-          cache-from: ${{ env.DOCKER_BASE_NAME }}:${{ env.DOCKER_TAG }}
+          tags: ghcr.io/${{ env.DOCKER_BASE_NAME }}:${{ env.DOCKER_TAG }}
+          cache-from: ghcr.io/${{ env.DOCKER_BASE_NAME }}:${{ env.DOCKER_TAG }}
           build-args: BUILDKIT_INLINE_CACHE=1
 
       - name: Build & Push (nvenc)
